--- a/C#/Projet_Projet_2_Tran_Strasser/MainWindow.xaml
+++ b/C#/Projet_Projet_2_Tran_Strasser/MainWindow.xaml
@@ -1,32 +1,32 @@
-﻿<Window x:Class="Projet_Projet_2_Tran_Strasser.MainWindow"
+﻿ <Window x:Class="Projet_Projet_2_Tran_Strasser.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Projet_Projet_2_Tran_Strasser"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
-            <RowDefinition/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="30"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="30"/>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="30"/>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="30"/>
-        </Grid.ColumnDefinitions>
-        <GroupBox x:Name="groupBoxEmission" Grid.Column="1" Header="GroupBox" HorizontalAlignment="Stretch" Grid.Row="1"  VerticalAlignment="Stretch" Background="#FFDDDDDD" BorderBrush="Black">
-            <TextBox x:Name="textBoxEmission" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="{x:Null}" Foreground="Black" Background="{x:Null}" AcceptsReturn="True" KeyUp="textBoxEmission_KeyUp"/>
-        </GroupBox>
-        <GroupBox x:Name="groupBoxReception" Grid.Column="3" Header="GroupBox" Margin="0" Grid.Row="1" Background="#FFDDDDDD" BorderBrush="Black">
-            <TextBox x:Name="textBoxReception" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Foreground="Black" BorderBrush="{x:Null}" Background="{x:Null}" AcceptsReturn="True" IsReadOnly="True"/>
-        </GroupBox>
-        <Button x:Name="buttonEnvoyer" Content="Envoyer" Grid.Column="1" HorizontalAlignment="Center" Margin="0" Grid.Row="3" Width="100" Click="button_Click"/>
-    </Grid>
+        Title="MainWindow" Height="450" Width="800"><Grid>
+    <Grid.RowDefinitions>
+        <RowDefinition Height="30"/>
+        <RowDefinition/>
+        <RowDefinition Height="30"/>
+        <RowDefinition Height="30"/>
+        <RowDefinition Height="30"/>
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="30"/>
+        <ColumnDefinition/>
+        <ColumnDefinition Width="30"/>
+        <ColumnDefinition/>
+        <ColumnDefinition Width="30"/>
+    </Grid.ColumnDefinitions>
+    <GroupBox x:Name="groupBoxEmission" Grid.Column="1" Header="GroupBox" HorizontalAlignment="Stretch" Grid.Row="1"  VerticalAlignment="Stretch" Background="#FFDDDDDD" BorderBrush="Black">
+        <TextBox x:Name="textBoxEmission" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" KeyUp="textBoxEmission_KeyUp"/>
+    </GroupBox>
+    <GroupBox x:Name="groupBoxReception" Grid.Column="3" Header="GroupBox" Margin="0" Grid.Row="1" Background="#FFDDDDDD" BorderBrush="Black">
+        <TextBox x:Name="textBoxReception" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+    </GroupBox>
+    <Button x:Name="buttonEnvoyer" Content="Envoyer" Grid.Column="1" HorizontalAlignment="Center" Margin="0" Grid.Row="3" Width="100" Click="button_Click"/>
+    <Button x:Name="buttonClear" Content="Clear" Grid.Column="3" HorizontalAlignment="Center" Margin="0" Grid.Row="3" Width="100" Click="buttonClear_Click"/>
+    <Button x:Name="buttonTest" Content="Test" Grid.Column="2" HorizontalAlignment="Center" Margin="0" Grid.Row="3" Width="30" Click="buttonTest_Click"/>
+</Grid>
 </Window>
